solution-files/challenge4/ingress-nginx/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
  name: tripviewer-ingress
  namespace: web
spec:
  rules:
  - host: ohcontainer.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /
